# CMake_Project

./: CMakeLists.txt  README.md
include/: utils.h
script/: build.sh
src/: CMakeLists.txt  main.cpp  utils.cpp  version.h.in
test/: CMakeLists.txt
